src/style.css
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --very-dark-blue: #1b1d23;
  --dark-grey: #60636d;
  --medium-grey: #7d828f;
  --light-grey: #c8ccd8;
  --very-light-grey: #eeeff4;
  --red: #df5656;
  --white: #fff;

  --page-background: var(--white);

  --text-primary: var(--dark-grey);
  --text-header-primary: var(--very-dark-blue);

  --input-text-placeholder: var(--light-grey);
  --input-text-active: var(--very-dark-blue);
  --input-text-error: var(--red);

  --button-background: var(--very-dark-blue);
  --button-text: var(--white);

  --button-background-hover: var(--dark-grey);
  --button-background-active: var(--light-grey);

  --number-button-background-hover: var(--very-light-grey);
  --number-button-background-active: var(--very-dark-blue);
}

body {
  font-family: "League Spartan", sans-serif;
  font-size: 1.125rem;
  line-height: 133.333%;
  letter-spacing: 0;
  color: var(--text-primary);
  background-color: var(--page-background);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 700;
  color: var(--text-header-primary);
}

img {
  max-width: 100%;
}

ul {
  list-style-type: none;
}

/* UTILITIES */
.heading-xl {
  font-size: 15.625rem;
  line-height: 80%;
  letter-spacing: -5px;
}

.heading-lg {
  font-size: clamp(3rem, 0.1374rem + 12.2137vw, 6rem);
  line-height: 83.333%;
  letter-spacing: clamp(-0.125rem, -0.0495rem + -0.1088vw, -0.075rem);
}

.heading-md {
  font-size: clamp(3rem, 1.5687rem + 6.1069vw, 4.5rem);
  line-height: 88.889%;
  letter-spacing: -2px;
}

.heading-sm {
  font-size: 2rem;
  line-height: 125%;
  letter-spacing: 0;
}

.btn--solid {
  display: inline-block;
  text-decoration: none;
  background-color: var(--button-background);
  color: var(--button-text);
  padding: 1.3em 1.8em;
  font-weight: 700;

  &:hover {
    background-color: var(--button-background-hover);
  }

  &:active {
    background-color: var(--button-background-active);
  }
}

.container {
  width: 85%;
  max-width: 1110px;
  margin: 0 auto;

  position: relative;
}

/* HEADER */
.nav-toggle {
  background: transparent;
  border: none;
  cursor: pointer;
}

header {
  position: relative;
}

header > .container {
  padding: clamp(2rem, 1.2347rem + 3.2653vw, 3.5rem) 0; /*32px - 56px*/
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.nav {
  visibility: hidden;
  height: 0;
  position: absolute;
}

.nav.visible {
  visibility: visible;
  height: auto;
  top: 100%;
  right: 0;
  background-color: var(--very-light-grey);
  width: 91.5%;
  padding: 2.5rem 3rem;
  z-index: 1000;
}

.nav__list {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.nav__item {
  font-weight: 700;
  cursor: pointer;
}

/* HERO */
.hero {
  padding: 6.875rem 0;
  color: var(--white);
  position: relative;

  .background {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
  }

  .overlay {
    position: absolute;
    top: 0;
    right: 0;
    width: 100%;
    height: 100%;
    background-color: #000;
    opacity: 0.35;
    z-index: 2;
  }

  h1,
  p,
  a {
    position: relative;
    z-index: 3;
  }

  h1 {
    color: var(--white);
    margin-bottom: 0.25em;
    max-width: 10ch;
  }

  .btn--solid {
    margin-top: clamp(2.5625rem, 7.6923rem + -10.687vw, 5.1875rem);
    .arrow {
      visibility: hidden;
      height: 0;
      position: absolute;
    }
  }
}

/* Welcome Section */
.welcome {
  margin: 8rem 0;
}

.welcome__text {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.welcome__title,
.welcome img {
  visibility: hidden;
  height: 0;
  position: absolute;
}

@media (max-width: 767px) {
  .nav__item {
    color: var(--very-dark-blue);
    font-size: 2rem;
    line-height: 125%;
    letter-spacing: 0;
  }
}

@media (min-width: 48rem) {
  .container {
    width: 75%;
  }

  /* HEADER */
  header > .container {
    justify-content: flex-start;
    gap: clamp(5rem, 2.8947rem + 4.386vw, 5.9375rem);
  }

  .nav-toggle {
    visibility: hidden;
    height: 0;
    position: absolute;
  }

  .nav {
    visibility: visible;
    height: auto;
    position: relative;
  }

  .nav__list {
    flex-direction: row;
    gap: 3.8125rem;
  }

  .nav__item:hover {
    color: var(--very-dark-blue);
  }

  /* HERO */
  .hero {
    padding: 0;
  }

  .hero > .container {
    padding: 11.4rem clamp(3.625rem, -14.9013rem + 38.5965vw, 11.875rem);
    position: relative;

    p {
      font-weight: 500;
      max-width: 44ch;
    }
  }

  .hero .btn--solid {
    .arrow {
      visibility: visible;
      height: auto;
      position: relative;

      margin-top: 0.25rem;
      margin-bottom: -0.25rem;
      margin-left: 1rem;

      g {
        stroke: var(--white);
      }
    }
  }

  /* Welcome */
  .welcome > .container {
    display: flex;
    flex-direction: row;
  }

  .welcome__title {
    color: var(--light-grey);
    visibility: visible;
    height: auto;
  }
}

@media (min-width: 64rem) {
  .container {
    width: 85%;
  }
}

